updated css exercises

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         </ol>
       </div>
       <!--Exercise four-->
-      <div>
-        <table>
+      <div >
+        <table id="table">
           <tr>
             <th>First Row + Column 1</th>
             <th>Column 2</th>
@@ -138,9 +138,11 @@
           <li>3</li>
         </ul>
       </div>
-      <footer id="footer">  
+      <div class="ex14">Exercise 14</div>
+      <!--Exercise ten--><footer id="footer">  
         Hey Welcome to my webpage 
       </footer>  
+      <script src="index.js"></script>
     </body>
 </html>
 </html>
